intel/bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/log.txt
bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:70:11: warning: decomposition declarations are a C++17 extension [-Wc++17-extensions]
  GLfloat [n][4] q;
          ^~~
bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:70:11: error: decomposition declaration cannot be declared with type 'GLfloat' (aka 'float'); declared type must be 'auto' or reference to 'auto'
bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:70:12: error: redefinition of 'n'
  GLfloat [n][4] q;
           ^
bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:69:10: note: previous definition is here
  GLuint n = 5;
         ^
bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:70:11: error: decomposition declaration '[n]' requires an initializer
  GLfloat [n][4] q;
          ^
bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:70:14: error: expected ';' at end of declaration
  GLfloat [n][4] q;
             ^
             ;
bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:72:11: warning: decomposition declarations are a C++17 extension [-Wc++17-extensions]
  GLfloat [n][4] p;
          ^~~
bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:72:11: error: decomposition declaration cannot be declared with type 'GLfloat' (aka 'float'); declared type must be 'auto' or reference to 'auto'
bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:72:12: error: redefinition of 'n'
  GLfloat [n][4] p;
           ^
bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:69:10: note: previous definition is here
  GLuint n = 5;
         ^
bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:72:11: error: decomposition declaration '[n]' requires an initializer
  GLfloat [n][4] p;
          ^
bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:72:14: error: expected ';' at end of declaration
  GLfloat [n][4] p;
             ^
             ;
bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:73:26: error: use of undeclared identifier 'q'
  gl_xform_points_4fv(n, q, m, p);
                         ^
bench_214_new/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main/extr_.reactosdllopenglmesaxform.c_gl_xform_points_4fv_with_main.c:73:32: error: use of undeclared identifier 'p'
  gl_xform_points_4fv(n, q, m, p);
                               ^
2 warnings and 10 errors generated.
HLS FPGA Parse FAILED.
